--- a/style.css
+++ b/style.css
@@ -67,14 +67,15 @@ nav ul li:hover{
 
 .hero {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     padding: 20rem 0 20rem 10rem;
     margin: auto;
+    gap: 8rem;
 }
 .titleAndContent {
-    width: 50vw;
-    /* flex: 1; */
+    width: fit-content;
+    flex: 1;
 }
 #title {
     font-weight: normal;
@@ -119,19 +120,84 @@ nav ul li:hover{
 .contactDiv img:hover {
     transform: scale(1.3);
 }
-.mainPic {
+#scribbles {
     flex: 1;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
 }
-
+.scribble > p {
+    font-family: 'EB Garamond', serif;
+}
+#scribbles div:nth-child(1) {
+    flex: 1;
+    align-self: center;
+}
+#scribbles div:nth-child(2) {
+    align-self: flex-start;
+}
+#scribbles div:nth-child(3) {
+    align-self: center;
+}
+#scribbles div:nth-child(4) {
+    align-self: flex-start;
+}
+#scribbles div:nth-child(5) {
+    align-self: flex-end;
+}
+#scribbles div:nth-child(6) {
+    align-self: flex-start;
+}
+#scribbles div:nth-child(7) {
+    align-self: flex-start;
+}
+#scribbles div:nth-child(8) {
+    align-self: center;
+}
+#scribbles div:nth-child(9) {
+    align-self: flex-end;
+}
+#scribbles div:nth-child(1) > p{
+    font-size: 2.5rem;
+    transform: rotate(-10deg);
+}
+#scribbles div:nth-child(2) > p{
+    font-size: 1.5rem;
+    transform: rotate(30deg);
+}
+#scribbles div:nth-child(3) > p{
+    font-size: 1rem;
+    transform: rotate(70deg);
+}
+#scribbles div:nth-child(4) > p{
+    font-size: 1rem;
+    transform: rotate(-20deg);
+}
+#scribbles div:nth-child(5) > p{
+    font-size: 1.5rem;
+    transform: rotate(30deg);
+}
+#scribbles div:nth-child(6) > p{
+    font-size: 1rem;
+    transform: rotate(75deg);
+}
+#scribbles div:nth-child(7) > p{
+    font-size: 1.5rem;
+    transform: rotate(15deg);
+}
+#scribbles div:nth-child(8) > p{
+    font-size: 2.5rem;
+    transform: rotate(-5deg);
+}
+#scribbles div:nth-child(9) > p{
+    font-size: 1.5rem;
+}
 
 
 .arrow-down {
     display: flex;
     flex-direction: column;
     width: 60px;
-    /* position: absolute; */
-    /* bottom: 5vh;
-    left: 5vw; */
     transition: transform .2s;
 }
 .arrow-down:hover {
@@ -140,7 +206,7 @@ nav ul li:hover{
 
 
 section {
-    height: 100vh;
+    min-height: 100vh;
 }
 
 #works, #contact {
@@ -148,8 +214,15 @@ section {
     flex-direction: column;
     gap: 2rem;
     justify-content: center;
-    align-items: center;
     padding: 10rem 7rem 0 7rem;
+}
+
+#contact {
+    align-items: flex-start;
+}
+
+#works {
+    align-items: center;
 }
 
 #works .arrow-down {
@@ -163,22 +236,20 @@ section {
 #work-cards-container {
     display: flex;
     justify-content: center;
-    align-items: left;
-    /* flex-wrap: wrap; */
-    /* margin: auto; */
+    flex-wrap: wrap;
+    margin: auto;
     width: 100%;
-    gap: 5rem;
+    gap: 7rem;
 }
 
 .work-card {
-    flex: 1;
-    height: 350px;
-    width: 350px;
+    height: 30rem;
+    width: 30rem;
     background-color: #C8C8C8;
     border-radius: 10px;
     filter: drop-shadow(2px 2px 8px rgb(0, 0, 0, .24));
     transition: transform .2s;
-    background-position: left; 
+    background-position: center; 
     background-repeat: no-repeat; 
     background-size: cover;
 }
@@ -188,15 +259,9 @@ section {
     transform: scale(1.1);
 }
 
-/* .work-card > img {
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-} */
-
-
 #contact {
     flex-direction: row;
+    margin-bottom: 10rem;
 }
 
 #contact > div, #contact form {
@@ -242,14 +307,41 @@ section {
     cursor: pointer;
 }
 
-#what-i-do {
+#about {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-#what-i-do > div {
+#about > div {
+    width: 70%;
+}
+
+#about p {
+    font-family: 'EB Garamond', serif;
+}
+
+#resume {
     background-color: #393939;
-    flex: 1;
+    color: white;
+    border: 0;
+    font-size: 1.5rem;
+    padding: 1.5rem;    
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    background-color: #393939;
+    color: white;
+    border: 0;
+    font-size: 1.5rem;
+}
+
+footer p {
+    font-size: 1.2rem;
 }
